# DataNexa

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  app.config.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: compile.yml  release.yml
docs/: README.en.md  RELEASE_NOTES.en.md
resources/: trayicon.rgba
scripts/: generate-updater-manifest.mjs  sync-config.mjs
src/: App.tsx  future-glass.css  i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  bridge.m  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.release.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: audit.rs  commands.rs  config.rs  db.rs  i18n.rs  lib.rs  main.rs  mcp.rs  policy.rs  startup.rs  state.rs  updater.rs  vault.rs
src/lib/: tauri.ts  updater.ts
