[package]
name = "datanexa"
version = "0.1.1"
description = "Local readonly MCP database gateway"
authors = ["Zachary Wu"]
edition = "2021"
license = "MIT"

[lib]
name = "datanexa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.59"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono", "uuid"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
toml = "0.8"
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
zeroize = "1.8"

[features]
default = []
