[package]
name = "datanexa"
version = "0.4.1"
description = "Local readonly MCP database gateway"
authors = ["Zachary Wu"]
edition = "2021"
license = "MIT"

[lib]
name = "datanexa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.2"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.59", features = ["visitor"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono", "uuid", "json", "rust_decimal"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = { version = "2", optional = true }
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
toml = "0.8"
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
rust_decimal = "1"
zeroize = "1.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[features]
default = []
updater = ["dep:tauri-plugin-updater"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
